[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/Script/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/space-3262811_1920.jpg" type="Texture" id=2]
[ext_resource path="res://assets/font/ubuntub.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/Scene/GUI/buttons/ButtonPlus.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Scene/GUI/buttons/ButtonMinus.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Script/ButtonMinus.gd" type="Script" id=6]
[ext_resource path="res://src/Scene/GUI/buttons/ButtonTimes.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Script/ButtonTimes.gd" type="Script" id=8]
[ext_resource path="res://src/Scene/GUI/buttons/ButtonDevide.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Script/ButtonDevide.gd" type="Script" id=10]
[ext_resource path="res://assets/font/closetext.tres" type="DynamicFont" id=11]
[ext_resource path="res://assets/btnset2.png" type="Texture" id=12]
[ext_resource path="res://assets/btnset.png" type="Texture" id=13]
[ext_resource path="res://assets/font/ubuntu/Ubuntu-L.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://src/Scene/Setting.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/Scene/Tentang.tscn" type="PackedScene" id=16]

[sub_resource type="Animation" id=1]
resource_name = "Button"
length = 15.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ButtonPlus:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 5.5, 6, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 248 ), Vector2( 170, 248 ), Vector2( 128, 248 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ButtonMinus:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 7, 7.5, 8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 248 ), Vector2( 170, 248 ), Vector2( 128, 248 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ButtonTimes:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 8.5, 9, 9.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 248 ), Vector2( 170, 248 ), Vector2( 128, 248 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ButtonDevide:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 10, 10.5, 11 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 248 ), Vector2( 170, 248 ), Vector2( 128, 248 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 14 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 51.2278
margin_top = 50.0
margin_right = -48.7722
margin_bottom = -50.0
alignment = 1

[node name="Judul" type="Label" parent="Menu"]
margin_right = 924.0
margin_bottom = 246.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Ayo Belajar 
Matematika"
align = 1
valign = 1
uppercase = true

[node name="Panel" type="Panel" parent="Menu"]
margin_top = 250.0
margin_right = 924.0
margin_bottom = 250.0

[node name="Button" type="HBoxContainer" parent="Menu"]
margin_top = 254.0
margin_right = 924.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu/Button"]
autoplay = "Button"
anims/Button = SubResource( 1 )

[node name="ButtonPlus" parent="Menu/Button" instance=ExtResource( 4 )]
margin_right = 128.0
margin_bottom = 246.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 5

[node name="HSplitContainer" type="HSplitContainer" parent="Menu/Button"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 246.0
size_flags_horizontal = 3
split_offset = 10
collapsed = true

[node name="ButtonMinus" parent="Menu/Button" instance=ExtResource( 5 )]
margin_left = 264.0
margin_right = 392.0
margin_bottom = 246.0
stretch_mode = 5
script = ExtResource( 6 )
scene_to_load = "res://src/Scene/QuizMinus.tscn"

[node name="HSplitContainer2" type="HSplitContainer" parent="Menu/Button"]
margin_left = 396.0
margin_right = 524.0
margin_bottom = 246.0
size_flags_horizontal = 3
split_offset = 10
collapsed = true

[node name="ButtonTimes" parent="Menu/Button" instance=ExtResource( 7 )]
margin_left = 528.0
margin_right = 656.0
margin_bottom = 246.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 5
script = ExtResource( 8 )
scene_to_load = "res://src/Scene/QuizTimes.tscn"

[node name="HSplitContainer3" type="HSplitContainer" parent="Menu/Button"]
margin_left = 660.0
margin_right = 788.0
margin_bottom = 246.0
size_flags_horizontal = 3
split_offset = 10
collapsed = true

[node name="ButtonDevide" parent="Menu/Button" instance=ExtResource( 9 )]
margin_left = 792.0
margin_right = 924.0
margin_bottom = 246.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 5
script = ExtResource( 10 )
scene_to_load = "res://src/Scene/QuizDevide.tscn"

[node name="BtnClose" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -57.0
margin_bottom = 69.0
flat = true

[node name="Label" type="Label" parent="BtnClose"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 11 )
text = "X"
align = 1
valign = 1

[node name="BtnSetting" type="TextureButton" parent="."]
margin_top = 19.0
margin_right = 77.0
margin_bottom = 70.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="BtnAbout" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -57.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.490196, 0.105882, 0.105882, 1 )
text = "Tentang"
flat = true

[node name="Setting" parent="." instance=ExtResource( 15 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="Tentang" parent="." instance=ExtResource( 16 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
[connection signal="pressed" from="BtnClose" to="." method="_on_BtnClose_pressed"]
[connection signal="pressed" from="BtnSetting" to="." method="_on_BtnSetting_pressed"]
[connection signal="pressed" from="BtnAbout" to="." method="_on_BtnAbout_pressed"]
